--- a/wrkSpot/CountryTableViewCell.xib
+++ b/wrkSpot/CountryTableViewCell.xib
@@ -1,21 +1,107 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CountryTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="119" id="KGk-i7-Jjw" customClass="CountryTableViewCell" customModule="wrkSpot" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="489" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="489" height="119"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5tZ-XN-t5F">
+                        <rect key="frame" x="8" y="8" width="473" height="100"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tQd-7I-Xfm">
+                                <rect key="frame" x="20" y="15" width="100" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="LiQ-Kn-Gd4"/>
+                                    <constraint firstAttribute="width" constant="100" id="Yl2-fj-UvN"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbU-9d-nQf">
+                                <rect key="frame" x="130" y="0.0" width="120" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="ggN-3c-71L"/>
+                                    <constraint firstAttribute="width" constant="120" id="rH1-Ek-xEi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAW-qL-ry9">
+                                <rect key="frame" x="438.66666666666669" y="8" width="26.333333333333314" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="s3W-Kt-jgJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" systemColor="linkColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wGr-t2-bxC">
+                                <rect key="frame" x="438.66666666666669" y="37" width="26.333333333333314" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="oJh-63-eB7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" systemColor="linkColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tqv-Ae-KGm">
+                                <rect key="frame" x="438.66666666666669" y="66" width="26.333333333333314" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="cUE-5S-6Iz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" systemColor="linkColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.82377736386419542" green="0.75920766830688347" blue="0.84258943796157837" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="tQd-7I-Xfm" firstAttribute="leading" secondItem="5tZ-XN-t5F" secondAttribute="leading" constant="20" id="09r-EL-osT"/>
+                            <constraint firstAttribute="trailing" secondItem="wGr-t2-bxC" secondAttribute="trailing" constant="8" id="GCc-M9-27W"/>
+                            <constraint firstItem="GAW-qL-ry9" firstAttribute="top" secondItem="5tZ-XN-t5F" secondAttribute="top" constant="8" id="S9j-Ek-Meb"/>
+                            <constraint firstAttribute="trailing" secondItem="GAW-qL-ry9" secondAttribute="trailing" constant="8" id="UBK-LY-n3e"/>
+                            <constraint firstItem="hbU-9d-nQf" firstAttribute="centerY" secondItem="tQd-7I-Xfm" secondAttribute="centerY" id="VCQ-zn-QKc"/>
+                            <constraint firstItem="tQd-7I-Xfm" firstAttribute="centerY" secondItem="5tZ-XN-t5F" secondAttribute="centerY" id="dLY-Q3-LeA"/>
+                            <constraint firstItem="tqv-Ae-KGm" firstAttribute="top" secondItem="wGr-t2-bxC" secondAttribute="bottom" constant="8" id="h5R-3C-CiA"/>
+                            <constraint firstItem="hbU-9d-nQf" firstAttribute="leading" secondItem="tQd-7I-Xfm" secondAttribute="trailing" constant="10" id="oPq-oz-19p"/>
+                            <constraint firstItem="wGr-t2-bxC" firstAttribute="top" secondItem="GAW-qL-ry9" secondAttribute="bottom" constant="8" id="r6k-jd-iDm"/>
+                            <constraint firstAttribute="trailing" secondItem="tqv-Ae-KGm" secondAttribute="trailing" constant="8" id="uMj-9y-FId"/>
+                            <constraint firstAttribute="height" constant="100" id="yD7-hu-urV"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="5tZ-XN-t5F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Pnx-XD-Dt4"/>
+                    <constraint firstItem="5tZ-XN-t5F" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="mZ2-4r-4LS"/>
+                    <constraint firstAttribute="bottom" secondItem="5tZ-XN-t5F" secondAttribute="bottom" constant="8" id="nVJ-pn-8pk"/>
+                    <constraint firstAttribute="trailing" secondItem="5tZ-XN-t5F" secondAttribute="trailing" constant="8" id="pdj-2O-Opn"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="capitalLbl" destination="GAW-qL-ry9" id="V6I-r5-cUD"/>
+                <outlet property="countryImage" destination="tQd-7I-Xfm" id="NvY-eQ-Szd"/>
+                <outlet property="countryNameLbl" destination="hbU-9d-nQf" id="WFI-zA-kOF"/>
+                <outlet property="currencyLbl" destination="wGr-t2-bxC" id="w5j-uo-Jwo"/>
+                <outlet property="populationLbl" destination="tqv-Ae-KGm" id="0R0-mN-peC"/>
+            </connections>
+            <point key="canvasLocation" x="205.34351145038167" y="32.74647887323944"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
