--- a/wrkSpot/filterView.xib
+++ b/wrkSpot/filterView.xib
@@ -1,18 +1,78 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="filterView" customModule="wrkSpot" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="285" height="275"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Population" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TQa-VS-Da3">
+                    <rect key="frame" x="10" y="8" width="265" height="31"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="31" id="xLe-gS-mSf"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="L8H-wZ-xUm">
+                    <rect key="frame" x="10" y="109" width="265" height="120"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lo5-i1-FTv">
+                            <rect key="frame" x="0.0" y="0.0" width="265" height="34.333333333333336"/>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="gray" title="&lt; 1M"/>
+                            <connections>
+                                <action selector="oneMBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="Tav-qF-3FS"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nMh-PL-oW9">
+                            <rect key="frame" x="0.0" y="43" width="265" height="34.333333333333343"/>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="gray" title="&lt; 5M"/>
+                            <connections>
+                                <action selector="fiveMBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="u6t-Z9-S9N"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9VC-rD-evT">
+                            <rect key="frame" x="0.0" y="85.666666666666657" width="265" height="34.333333333333343"/>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="gray" title="&lt; 10M"/>
+                            <connections>
+                                <action selector="tenMBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="Vca-KX-bRy"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="120" id="skO-OZ-6Bv"/>
+                    </constraints>
+                </stackView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="TQa-VS-Da3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="CxG-tE-PW2"/>
+                <constraint firstItem="TQa-VS-Da3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="Eb1-MS-7fb"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="L8H-wZ-xUm" secondAttribute="trailing" constant="10" id="Ko1-zV-eld"/>
+                <constraint firstItem="L8H-wZ-xUm" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="50" id="bzd-wy-qQT"/>
+                <constraint firstItem="L8H-wZ-xUm" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="kEM-rh-zhg"/>
+                <constraint firstAttribute="trailing" secondItem="TQa-VS-Da3" secondAttribute="trailing" constant="10" id="wgk-ol-evZ"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-9.9236641221374047" y="-183.45070422535213"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
